--- a/ObjectDetection-CoreML/Info.plist
+++ b/ObjectDetection-CoreML/Info.plist
@@ -22,6 +22,16 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>for inference</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Use Location Tracking2</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Use Location Tracking</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Photo access</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -43,7 +53,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Photo access</string>
 </dict>
 </plist>
