--- a/ObjectDetection-CoreML/Info.plist
+++ b/ObjectDetection-CoreML/Info.plist
@@ -33,7 +33,7 @@
 		<string>location</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>LaunchScreen.storyboard</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
